# qp-poseidon

./: CHANGELOG.md  CONSTANT_TIME_TESTING.md  Cargo.toml  README.md
.github/actions/macos/: action.yml
.github/actions/ubuntu/: action.yml
.github/workflows/: ci.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
benches/: ct_bench.rs
constants/: Cargo.toml  README.md
constants/src/: lib.rs
core/: Cargo.toml  README.md  bench_config.toml
core/benches/: poseidon_benchmarks.rs
core/build_helpers/: extract_constants.rs
core/src/: constants.rs  goldilocks.rs  lib.rs  poseidon2.rs  serialization.rs  zktrie.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/substrate/: Cargo.toml  README.md
crates/substrate/src/: lib.rs
examples/: ct_bench.rs
formal/: GoldilocksSpec.lean  lake-manifest.json  lakefile.toml
formal/GoldilocksSpec/: Correctness.lean  Model.lean
formal/ci/: AxiomsCheck.lean
src/: goldilocks.rs  lib.rs  serialization.rs
substrate/: Cargo.toml  README.md
substrate/src/: lib.rs
tests/: alloc_bounds.rs  digest_limb_truncation.rs  non_canonical_limbs.rs  quantized_amount.rs
