[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
version = "2.0.2"
authors = ["Quantus Network Developers <hello@quantus.com>"]
homepage = "https://quantus.com"
repository = "https://github.com/Quantus-Network/qp-poseidon"
license = "MIT-0"
edition = "2021"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4.3"
