[package]
name = "qp-poseidon-core"
version = "3.0.1"
authors = ["Quantus Network Developers <hello@quantus.com>"]
homepage = "https://quantus.com"
repository = "https://github.com/Quantus-Network/qp-poseidon"
license = "MIT-0"
edition = "2021"
description = "Self-contained Poseidon2 hash core over Goldilocks"
keywords = [
	"cryptography",
	"hash-functions",
	"no-std",
	"poseidon2",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

[dependencies]

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
dudect-bencher = "0.6"

[features]
default = []
std = []

[[bench]]
name = "poseidon_benchmarks"
harness = false

[[example]]
name = "ct_bench"
