[package]
name = "qp-poseidon-constants"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Precomputed Poseidon2 constants for Goldilocks field"

keywords = [
	"cryptography",
	"hash-functions",
	"poseidon",
	"quantus-network",
	"substrate",
]
categories = ["cryptography"]

[dependencies]
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-field = { workspace = true }
rand_chacha.workspace = true
rand.workspace = true

[dev-dependencies]
p3-symmetric = { workspace = true }

[features]
default = []

[[bin]]
name = "extract_constants"
path = "build_helpers/extract_constants.rs"
