[package]
name = "qp-poseidon-constants"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Precomputed Poseidon2 constants for Goldilocks field"

keywords = [
	"cryptography",
	"hash-functions",
	"poseidon",
    "no-std",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

[dependencies]
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-field = { workspace = true }
rand_chacha.workspace = true
rand.workspace = true

[dev-dependencies]
p3-symmetric = { workspace = true }

[features]
default = []
std = []

[[bin]]
name = "extract_constants"
path = "build_helpers/extract_constants.rs"
