[package]
name = "qp-poseidon-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Poseidon2 hash core over Goldilocks with a Plonky2/Plonky3-agnostic compatibility layer"
keywords = [
	"cryptography",
	"hash-functions",
	"no-std",
	"poseidon2",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

[dependencies]
qp-poseidon-constants.workspace = true

# Plonky3 stack
p3-goldilocks.workspace = true
p3-poseidon2.workspace = true
p3-field.workspace = true
p3-symmetric.workspace = true

# Constant-time testing (optional for binaries)
dudect-bencher = { version = "0.6", optional = true }

[dev-dependencies]
hex.workspace = true
criterion.workspace = true

[features]
default = []
std = []
ct-testing = ["dudect-bencher", "std"]

[[bin]]
name = "ct_bench"
required-features = ["ct-testing"]


[[bench]]
name = "poseidon_benchmarks"
harness = false
