[package]
name = "qp-poseidon-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Self-contained Poseidon2 hash core over Goldilocks"
keywords = [
	"cryptography",
	"hash-functions",
	"no-std",
	"poseidon2",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

# Constant-time testing (optional for binaries)
[dependencies]
dudect-bencher = { version = "0.6", optional = true }

[dev-dependencies]
hex.workspace = true
criterion.workspace = true

[features]
default = []
std = []
ct-testing = ["dudect-bencher", "std"]

[[bin]]
name = "ct_bench"
required-features = ["ct-testing"]


[[bench]]
name = "poseidon_benchmarks"
harness = false
