[package]
name = "qp-poseidon-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Pure Poseidon2 hash implementation using plonky3 field arithmetic - no Substrate dependencies"
keywords = [
	"cryptography",
	"hash-functions",
	"no-std",
	"poseidon2",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

[dependencies]
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-poseidon2 = { version = "0.3.0", default-features = false }
p3-field = { version = "0.3.0", default-features = false }
p3-symmetric = { version = "0.3.0", default-features = false }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }


[dev-dependencies]
hex = "0.4.3"

[features]
default = []
std = []
