[package]
name = "qp-poseidon-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Pure Poseidon2 hash implementation using plonky3 field arithmetic - no external dependencies"
keywords = [
	"cryptography",
	"hash-functions",
	"no-std",
	"poseidon2",
	"quantus-network",
]
categories = ["cryptography", "no-std"]

[dependencies]

p3-goldilocks.workspace = true
p3-poseidon2.workspace = true
p3-field.workspace = true
p3-symmetric.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
hex.workspace = true
criterion.workspace = true

[features]
default = []
std = []

[[bench]]
name = "poseidon_benchmarks"
harness = false
