[package]
name = "qp-poseidon"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Poseidon hash implementation for Substrate/Polkadot ecosystem using plonky2 field arithmetic"
keywords = [
	"cryptography",
	"hash-functions",
	"poseidon",
	"quantus-network",
	"substrate",
]
categories = ["cryptography"]

[dependencies]
qp-poseidon-core = { path = "../core", default-features = false }
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-field = { version = "0.3.0", default-features = false }
log.workspace = true
scale-info.workspace = true
sp-core = { version = "37.0.0", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-trie = { version = "40.0.0", default-features = false }
codec.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
env_logger.workspace = true
ctor.workspace = true

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-storage/std",
	"log/std",
	"scale-info/std",
	"codec/std",
	"serde/std"
]
serde = [
	"codec/serde",
	"dep:serde",
	"scale-info/serde",
]
